--- a/src/projects/InfluxDbClient/InfluxDbClient.csproj
+++ b/src/projects/InfluxDbClient/InfluxDbClient.csproj
@@ -30,16 +30,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EnsureThat.vDinasour, Version=3.3.0.13, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Ensure.That.3.3.0\lib\net45\EnsureThat.vDinasour.dll</HintPath>
+    <Reference Include="EnsureThat, Version=4.0.0.26, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Ensure.That.4.0.0\lib\net45\EnsureThat.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Requester, Version=1.0.0.48, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Requester.1.0.0-rc1\lib\net45\Requester.dll</HintPath>
+    <Reference Include="Requester, Version=1.0.0.50, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Requester.1.0.0\lib\net45\Requester.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
