--- a/src/tests/MyInfluxDbClient.UnitTests/MyInfluxDbClient.UnitTests.csproj
+++ b/src/tests/MyInfluxDbClient.UnitTests/MyInfluxDbClient.UnitTests.csproj
@@ -53,10 +53,17 @@
     <Compile Include="..\..\GlobalAssemblyInfo.cs">
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="HourResolutionTests.cs" />
+    <Compile Include="MicrosecondsResolutionTests.cs" />
+    <Compile Include="MillisecondsResolutionTests.cs" />
+    <Compile Include="MinutesResolutionTests.cs" />
+    <Compile Include="NanosecondsResolutionTests.cs" />
+    <Compile Include="SecondsResolutionTests.cs" />
     <Compile Include="TimeStampResolutionsTests.cs" />
     <Compile Include="TimeStampTests.cs" />
     <Compile Include="UnitTestsOf.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnixDateTime.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\projects\MyInfluxDbClient\MyInfluxDbClient.csproj">
