--- a/src/projects/MyInfluxDbClient/MyInfluxDbClient.csproj
+++ b/src/projects/MyInfluxDbClient/MyInfluxDbClient.csproj
@@ -54,11 +54,12 @@
     <Compile Include="..\..\GlobalAssemblyInfo.cs">
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="Extensions\DictionaryExtensions.cs" />
     <Compile Include="Extensions\TaskExtensions.cs" />
     <Compile Include="HourResolution.cs" />
+    <Compile Include="IInfluxPointsSerializer.cs" />
     <Compile Include="InfluxDbClient.cs" />
-    <Compile Include="InfluxDbEnvironment.cs" />
+    <Compile Include="Protocols\LineProtocolInfluxPointsSerializer.cs" />
+    <Compile Include="Protocols\LineProtocolFormat.cs" />
     <Compile Include="InfluxDbClientException.cs" />
     <Compile Include="InfluxPoint.cs" />
     <Compile Include="InfluxPoints.cs" />
@@ -68,6 +69,7 @@
     <Compile Include="NanosecondsResolution.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SecondsResolution.cs" />
+    <Compile Include="Protocols\StringBuilderLineProtocolWriter.cs" />
     <Compile Include="TimeStamp.cs" />
     <Compile Include="TimeStampResolution.cs" />
     <Compile Include="TimeStampResolutions.cs" />
