--- a/src/tests/MyInfluxDbClient.UnitTests/MyInfluxDbClient.UnitTests.csproj
+++ b/src/tests/MyInfluxDbClient.UnitTests/MyInfluxDbClient.UnitTests.csproj
@@ -54,6 +54,8 @@
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="HourResolutionTests.cs" />
+    <Compile Include="TestData\InfluxPointsTestData.cs" />
+    <Compile Include="InfluxPointsUnitTests.cs" />
     <Compile Include="MicrosecondsResolutionTests.cs" />
     <Compile Include="MillisecondsResolutionTests.cs" />
     <Compile Include="MinutesResolutionTests.cs" />
