--- a/src/projects/MyInfluxDbClient/MyInfluxDbClient.csproj
+++ b/src/projects/MyInfluxDbClient/MyInfluxDbClient.csproj
@@ -54,11 +54,14 @@
     <Compile Include="..\..\GlobalAssemblyInfo.cs">
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="Consistency.cs" />
     <Compile Include="Extensions\TaskExtensions.cs" />
     <Compile Include="HourResolution.cs" />
+    <Compile Include="IInfluxDbClient.cs" />
     <Compile Include="IInfluxPointsSerializer.cs" />
     <Compile Include="InfluxDbClient.cs" />
     <Compile Include="InfluxDbEnvironment.cs" />
+    <Compile Include="IWriteOptionsUrlArgsBuilder.cs" />
     <Compile Include="Protocols\LineProtocolInfluxPointsSerializer.cs" />
     <Compile Include="Protocols\LineProtocolFormat.cs" />
     <Compile Include="InfluxDbClientException.cs" />
@@ -72,8 +75,11 @@
     <Compile Include="SecondsResolution.cs" />
     <Compile Include="Protocols\StringBuilderLineProtocolWriter.cs" />
     <Compile Include="TimeStamp.cs" />
+    <Compile Include="TimeStampPrecision.cs" />
     <Compile Include="TimeStampResolution.cs" />
     <Compile Include="TimeStampResolutions.cs" />
+    <Compile Include="WriteOptions.cs" />
+    <Compile Include="Net\WriteOptionsUrlArgsBuilder.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
