--- a/src/tests/MyInfluxDbClient.IntegrationTests/MyInfluxDbClient.IntegrationTests.csproj
+++ b/src/tests/MyInfluxDbClient.IntegrationTests/MyInfluxDbClient.IntegrationTests.csproj
@@ -55,9 +55,10 @@
     <Compile Include="..\..\GlobalAssemblyInfo.cs">
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="DbOpsTests.cs" />
+    <Compile Include="IntegrationTestsRuntime.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="IntegrationTestsOf.cs" />
-    <Compile Include="TestingAssemblyInitializer.cs" />
+    <Compile Include="IntegrationTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
