--- a/src/projects/MyInfluxDbClient/MyInfluxDbClient.csproj
+++ b/src/projects/MyInfluxDbClient/MyInfluxDbClient.csproj
@@ -54,6 +54,7 @@
     <Compile Include="..\..\GlobalAssemblyInfo.cs">
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="Commands\AlterRetentionPolicy.cs" />
     <Compile Include="Consistency.cs" />
     <Compile Include="Extensions\TaskExtensions.cs" />
     <Compile Include="HourResolution.cs" />
@@ -76,8 +77,12 @@
     <Compile Include="MinuteResolution.cs" />
     <Compile Include="NanosecondsResolution.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Responses\RetentionPolicyItem.cs" />
+    <Compile Include="Meta\RetentionPolicySchema.cs" />
     <Compile Include="Responses\SerieResult.cs" />
     <Compile Include="Responses\SerieResultItem.cs" />
+    <Compile Include="Commands\CreateRetentionPolicy.cs" />
+    <Compile Include="RetentionPolicyDuration.cs" />
     <Compile Include="SecondsResolution.cs" />
     <Compile Include="Protocols\StringBuilderLineProtocolWriter.cs" />
     <Compile Include="TimeStamp.cs" />
@@ -88,7 +93,9 @@
     <Compile Include="Net\WriteOptionsUrlArgsBuilder.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
