--- a/src/tests/MyInfluxDbClient.UnitTests/MyInfluxDbClient.UnitTests.csproj
+++ b/src/tests/MyInfluxDbClient.UnitTests/MyInfluxDbClient.UnitTests.csproj
@@ -55,6 +55,8 @@
     </Compile>
     <Compile Include="HourResolutionTests.cs" />
     <Compile Include="InfluxPointTests.cs" />
+    <Compile Include="RetentionPolicyDurationTests.cs" />
+    <Compile Include="Commands\RetentionPolicyTests.cs" />
     <Compile Include="Shoulds\InfluxPointShoulds.cs" />
     <Compile Include="TestData\InfluxPointsTestData.cs" />
     <Compile Include="InfluxPointsTests.cs" />
