Get and Drop series

--- a/src/projects/MyInfluxDbClient/MyInfluxDbClient.csproj
+++ b/src/projects/MyInfluxDbClient/MyInfluxDbClient.csproj
@@ -56,7 +56,7 @@
     </Compile>
     <Compile Include="Commands\AlterRetentionPolicy.cs" />
     <Compile Include="Consistency.cs" />
-    <Compile Include="DropSeriesQuery.cs" />
+    <Compile Include="Commands\DropSeriesQuery.cs" />
     <Compile Include="Extensions\TaskExtensions.cs" />
     <Compile Include="HourResolution.cs" />
     <Compile Include="IInfluxDbClient.cs" />
@@ -64,6 +64,7 @@
     <Compile Include="InfluxDbClient.cs" />
     <Compile Include="InfluxDbEnvironment.cs" />
     <Compile Include="IQuery.cs" />
+    <Compile Include="Meta\SerieSchema.cs" />
     <Compile Include="Responses\ErrorResult.cs" />
     <Compile Include="Responses\InfluxDbErrorResponse.cs" />
     <Compile Include="Responses\InfluxDbResponse.cs" />
@@ -88,7 +89,7 @@
     <Compile Include="SecondsResolution.cs" />
     <Compile Include="Protocols\StringBuilderLineProtocolWriter.cs" />
     <Compile Include="SeriesQuery.cs" />
-    <Compile Include="ShowSeriesQuery.cs" />
+    <Compile Include="Commands\GetSeriesQuery.cs" />
     <Compile Include="TimeStamp.cs" />
     <Compile Include="TimeStampPrecision.cs" />
     <Compile Include="TimeStampResolution.cs" />
