--- a/src/tests/MyInfluxDbClient.IntegrationTests/MyInfluxDbClient.IntegrationTests.csproj
+++ b/src/tests/MyInfluxDbClient.IntegrationTests/MyInfluxDbClient.IntegrationTests.csproj
@@ -56,10 +56,12 @@
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="DbOpsTests.cs" />
+    <Compile Include="DropSeriesTests.cs" />
     <Compile Include="IntegrationTestsRuntime.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IntegrationTests.cs" />
     <Compile Include="RetentionPolicyTests.cs" />
+    <Compile Include="GetSeriesTests.cs" />
     <Compile Include="WritePointsTests.cs" />
   </ItemGroup>
   <ItemGroup>
