--- a/src/projects/MyInfluxDbClient/MyInfluxDbClient.csproj
+++ b/src/projects/MyInfluxDbClient/MyInfluxDbClient.csproj
@@ -54,9 +54,9 @@
     <Compile Include="..\..\GlobalAssemblyInfo.cs">
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="Commands\AlterRetentionPolicy.cs" />
+    <Compile Include="AlterRetentionPolicy.cs" />
     <Compile Include="Consistency.cs" />
-    <Compile Include="Commands\DropSeriesQuery.cs" />
+    <Compile Include="DropSeries.cs" />
     <Compile Include="Extensions\TaskExtensions.cs" />
     <Compile Include="HourResolution.cs" />
     <Compile Include="IInfluxDbClient.cs" />
@@ -80,16 +80,18 @@
     <Compile Include="MinuteResolution.cs" />
     <Compile Include="NanosecondsResolution.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Responses\RetentionPolicyItem.cs" />
+    <Compile Include="RetentionPolicyItem.cs" />
     <Compile Include="Meta\RetentionPolicySchema.cs" />
-    <Compile Include="Responses\SerieItem.cs" />
+    <Compile Include="SerieItem.cs" />
     <Compile Include="Responses\SerieResult.cs" />
-    <Compile Include="Commands\CreateRetentionPolicy.cs" />
+    <Compile Include="CreateRetentionPolicy.cs" />
+    <Compile Include="Series.cs" />
+    <Compile Include="Tags.cs" />
     <Compile Include="RetentionPolicyDuration.cs" />
     <Compile Include="SecondsResolution.cs" />
     <Compile Include="Protocols\StringBuilderLineProtocolWriter.cs" />
     <Compile Include="SeriesQuery.cs" />
-    <Compile Include="Commands\GetSeriesQuery.cs" />
+    <Compile Include="GetSeries.cs" />
     <Compile Include="TimeStamp.cs" />
     <Compile Include="TimeStampPrecision.cs" />
     <Compile Include="TimeStampResolution.cs" />
