--- a/src/tests/MyInfluxDbClient.IntegrationTests/MyInfluxDbClient.IntegrationTests.csproj
+++ b/src/tests/MyInfluxDbClient.IntegrationTests/MyInfluxDbClient.IntegrationTests.csproj
@@ -58,6 +58,7 @@
     <Compile Include="DbOpsTests.cs" />
     <Compile Include="DropSeriesTests.cs" />
     <Compile Include="GetFieldKeysTests.cs" />
+    <Compile Include="GetTagKeysTests.cs" />
     <Compile Include="IntegrationTestsRuntime.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IntegrationTests.cs" />
