--- a/src/tests/MyInfluxDbClient.UnitTests/MyInfluxDbClient.UnitTests.csproj
+++ b/src/tests/MyInfluxDbClient.UnitTests/MyInfluxDbClient.UnitTests.csproj
@@ -59,7 +59,7 @@
     <Compile Include="RetentionPolicyDurationTests.cs" />
     <Compile Include="RetentionPolicyTests.cs" />
     <Compile Include="Shoulds\InfluxPointShoulds.cs" />
-    <Compile Include="GetSeriesTests.cs" />
+    <Compile Include="ShowSeriesTests.cs" />
     <Compile Include="TestData\InfluxPointsTestData.cs" />
     <Compile Include="InfluxPointsTests.cs" />
     <Compile Include="MicrosecondsResolutionTests.cs" />
