--- a/src/projects/MyInfluxDbClient/MyInfluxDbClient.csproj
+++ b/src/projects/MyInfluxDbClient/MyInfluxDbClient.csproj
@@ -56,6 +56,7 @@
     </Compile>
     <Compile Include="AlterRetentionPolicy.cs" />
     <Compile Include="Consistency.cs" />
+    <Compile Include="Databases.cs" />
     <Compile Include="DropSeries.cs" />
     <Compile Include="Extensions\TaskExtensions.cs" />
     <Compile Include="FieldKeys.cs" />
