--- a/src/MyInfluxDbClient.nuspec
+++ b/src/MyInfluxDbClient.nuspec
@@ -6,8 +6,8 @@
         <version>$version$</version>
         <authors>danielwertheim</authors>
         <copyright>©Daniel Wertheim</copyright>
-        <summary>Simple, async, InfluxDB client for InfluxDB v0.9+.</summary>
-        <description>Provides an async API that allows you to manage InfluxDB databases, write points (with measurement, tags, fields according to line protocol v0.9+) etc.</description>
+        <summary>Simple, async, InfluxDB client for InfluxDB v1.1.</summary>
+        <description>Provides an async API that allows you to manage InfluxDB databases, write points (with measurement, tags, fields according to line protocol v1.1+) etc.</description>
         <projectUrl>https://github.com/danielwertheim/myinfluxdbclient</projectUrl>
         <licenseUrl>https://raw.githubusercontent.com/danielwertheim/myinfluxdbclient/master/LICENSE.txt</licenseUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -17,13 +17,13 @@
         </frameworkAssemblies>
         <dependencies>
            <group targetFramework="net45">
-             <dependency id="Ensure.That" version="4.0.0" />
-             <dependency id="Newtonsoft.Json" version="8.0.2" />
-             <dependency id="Requester" version="1.2.0" />
+             <dependency id="Ensure.That" version="5.0.0" />
+             <dependency id="Newtonsoft.Json" version="9.0.1" />
+             <dependency id="Requester" version="1.5.1" />
            </group>
         </dependencies>
     </metadata>
     <files>
-        <file src="MyInfluxDbClient\MyInfluxDbClient.dll" target="lib\net45" />
+        <file src="projects\MyInfluxDbClient\bin\$configuration$\MyInfluxDbClient.dll" target="lib\net45" />
     </files>
 </package>
