--- a/src/tests/MyInfluxDbClient.UnitTests/MyInfluxDbClient.UnitTests.csproj
+++ b/src/tests/MyInfluxDbClient.UnitTests/MyInfluxDbClient.UnitTests.csproj
@@ -53,6 +53,9 @@
     <Compile Include="..\..\GlobalAssemblyInfo.cs">
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="..\..\GlobalAssemblyVersion.cs">
+      <Link>Properties\GlobalAssemblyVersion.cs</Link>
+    </Compile>
     <Compile Include="DropSeriesTests.cs" />
     <Compile Include="HourResolutionTests.cs" />
     <Compile Include="InfluxPointTests.cs" />
