--- a/src/MyInfluxDbClient.nuspec
+++ b/src/MyInfluxDbClient.nuspec
@@ -9,9 +9,10 @@
         <summary>Simple, async, InfluxDB client for InfluxDB v1.1.</summary>
         <description>Provides an async API that allows you to manage InfluxDB databases, write points (with measurement, tags, fields according to line protocol v1.1+) etc.</description>
         <projectUrl>https://github.com/danielwertheim/myinfluxdbclient</projectUrl>
+        <releaseNotes>https://github.com/danielwertheim/myinfluxdbclient/blob/master/ReleaseNotes.md</releaseNotes>
         <licenseUrl>https://raw.githubusercontent.com/danielwertheim/myinfluxdbclient/master/LICENSE.txt</licenseUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
-        <tags>influxdb</tags>
+        <tags>influxdb time-series</tags>
         <frameworkAssemblies>
           <frameworkAssembly assemblyName="System.Net.Http" targetFramework="net45" />
         </frameworkAssemblies>
